contrast corrected on form inputs and faq icons

--- a/src/assets/scss/_accordion.scss
+++ b/src/assets/scss/_accordion.scss
@@ -21,7 +21,7 @@
             height: 1rem;
             position: absolute;
             right: nth($accordion-header-padding,2)/2;
-            background: transparent url("data:image/svg+xml;charset=UTF-8,%3csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' viewBox='0 0 16 16'%3e%3cpath fill='%2380CDEC' fill-rule='evenodd' d='M15 8.986h-6.014v6.014h-1.972v-6.014h-6.014v-1.972h6.014v-6.014h1.972v6.014h6.014z'/%3e%3c/svg%3e") center no-repeat;
+            background: transparent url("data:image/svg+xml;charset=UTF-8,%3csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' viewBox='0 0 16 16'%3e%3cpath fill='%23227592' fill-rule='evenodd' d='M15 8.986h-6.014v6.014h-1.972v-6.014h-6.014v-1.972h6.014v-6.014h1.972v6.014h6.014z'/%3e%3c/svg%3e") center no-repeat;
             top: 50%;
             transform: translate3d(0, -50%, 0);
         }
