--- a/src/assets/scss/_analyse.scss
+++ b/src/assets/scss/_analyse.scss
@@ -75,7 +75,7 @@
 			&-btn {
 				position: relative;
 				background: #fff;
-				border: 1px solid #CFD4D9;
+				border: 1px solid #6c757d;
 				border-radius: 6px;
 				text-align: left;
 				width: 305px;
@@ -200,7 +200,7 @@
 			&-input {
 				vertical-align: middle;
 				margin: 0 8px;
-				border: 1px solid #CFD4D9;
+				border: 1px solid #6c757d;
 				border-radius: 6px;
 
 				font-size: 15px;
@@ -214,7 +214,7 @@
 				}
 
 				&:focus {
-					border-color: #CFD4D9;
+					border-color: #6c757d;
 					outline: none;
 					box-shadow: 0px 0px 0px 3px #c9d7df;
 				}
@@ -268,7 +268,7 @@
 		background: #fff;
 		border-radius: 50px;
 		display: inline-block;
-		border: 1px solid #D4EAF7;
+		border: 1px solid #006082;
 		font-size: 0;
 		position: relative;
 		white-space: nowrap;
